Checkin all changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Authorization/.vs/Authorization/v15
+/Authorization/Authorization/bin/Debug/netcoreapp2.1
+/Authorization/Authorization/Properties
+/Authorization/Authorization/obj
