--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Authorization/Authorization/bin/Debug/netcoreapp2.1
 /Authorization/Authorization/Properties
 /Authorization/Authorization/obj
+/Authorization/.vs/Authorization/DesignTimeBuild
