--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Authorization/Authorization/Properties
 /Authorization/Authorization/obj
 /Authorization/.vs/Authorization/DesignTimeBuild
+/Authorization/Aspose.Net/obj
+/Authorization/Aspose.Net/bin/Debug/netcoreapp2.1
+/Authorization/Aspose.Net/Properties
